Fixed the screen overflow

--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@ body {
   border-radius: 1rem;
   background-color: hsl(224, 36%, 15%);
 
+  overflow: hidden;
+
   transition: all 0.5s;
 }
 
